# minibar

./: .gitignore  Cargo.toml  README.md  bun.lockb  compose.yaml  package.json
cli/: Cargo.toml
cli/src/: main.rs
compose/: Caddyfile
db/: .gitignore  Cargo.toml  diesel.toml
db/migrations/2023-10-03-085444_init/: down.sql  up.sql
db/src/: lib.rs  models.rs
lib/: Cargo.toml
lib/src/: auth.rs  lib.rs  order.rs  webhook.rs
lib/src/instance/: config.rs
ntfy/: Cargo.toml
ntfy/src/: lib.rs  main.rs
rest/: Cargo.toml  Containerfile.dev
rest/src/: lib.rs  main.rs  middleware.rs  routes.rs
rest/src/services/: auth.rs
web/: .env.development  Containerfile.dev  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
web/src/: App.svelte  main.css  main.ts
web/src/i18n/: nl.json
web/src/lib/: BeverageButton.svelte  BeverageDetails.svelte  BeverageInfo.svelte  BeverageTile.svelte  CapabilityButton.svelte  MixButton.svelte  OrderBar.svelte  WaterButton.svelte
web/src/modules/: api.ts  auth.ts  beverage.ts  config.ts  order.ts  stock.ts
web/src/pages/: Beverage.svelte  Catalog.svelte  Login.svelte  ViewBeverage.svelte
