[package]
name = "minibar_ntfy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minibar = { path = "../lib" }
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.20", features = ["json"] }
