[package]
name = "minibar_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minibar = { path = "../lib" }
uom = "0.35.0"
actix-web = "4"
actix-web-httpauth = "0.8.1"
actix-cors = "0.6.4"
serde = "1.0.188"
serde_json = "1.0.107"
reqwest = { version = "0.11.20", features = ["json"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
