[package]
name = "minibar_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minibar = { path = "../lib" }
minibar_db = { path = "../db" }
uom = "0.35.0"
actix-web = "4"
actix-cors = "0.6.4"
actix-identity = "0.6.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
serde = "1.0.188"
serde_json = "1.0.107"
reqwest = { version = "0.11.20", features = ["json"] }
